Add the new VisualizeAov for 'origin/dev' only

--- a/source/tasks/CMakeLists.txt
+++ b/source/tasks/CMakeLists.txt
@@ -26,9 +26,6 @@ set(_SOURCE_FILES
     "fxaaTask.cpp"
     "resources.cpp"
     "ssaoTask.cpp"
-    "visualizeAovCompute.cpp"
-    "visualizeAovCompute.h"
-    "visualizeAovTask.cpp"
 )
 
 # Collect the public header files.
@@ -40,8 +37,21 @@ set(_HEADER_FILES
     "${_TASKS_INCLUDE_DIR}/fxaaTask.h"
     "${_TASKS_INCLUDE_DIR}/resources.h"
     "${_TASKS_INCLUDE_DIR}/ssaoTask.h"
-    "${_TASKS_INCLUDE_DIR}/visualizeAovTask.h"
 )
+
+# Add custom VisualizeAovTask implementation when ADSK_OPENUSD_PENDING is NOT enabled.
+# When ADSK_OPENUSD_PENDING is defined, the OpenUSD HdxVisualizeAovTask is used instead.
+# This provides a custom AOV visualization task with GPU-only depth min/max computation.
+if(NOT ENABLE_ADSK_OPENUSD_PENDING)
+    list(APPEND _SOURCE_FILES
+        "visualizeAovCompute.cpp"
+        "visualizeAovCompute.h"
+        "visualizeAovTask.cpp"
+    )
+    list(APPEND _HEADER_FILES
+        "${_TASKS_INCLUDE_DIR}/visualizeAovTask.h"
+    )
+endif()
 
 # Define the library.
 # NOTE: OBJECT is used so that the parent library contain the contents of this one (for shared builds).
