Implement the framework to support Hydra2.0 selection

--- a/source/engine/CMakeLists.txt
+++ b/source/engine/CMakeLists.txt
@@ -51,11 +51,13 @@ set(_HEADER_FILES
     "${_ENGINE_INCLUDE_DIR}/renderBufferManager.h"
     "${_ENGINE_INCLUDE_DIR}/renderBufferSettingsProvider.h"
     "${_ENGINE_INCLUDE_DIR}/renderIndexProxy.h"
+    "${_ENGINE_INCLUDE_DIR}/selectionDelegate.h"
     "${_ENGINE_INCLUDE_DIR}/selectionSettingsProvider.h"
     "${_ENGINE_INCLUDE_DIR}/syncDelegate.h"
     "${_ENGINE_INCLUDE_DIR}/taskCreationHelpers.h"
     "${_ENGINE_INCLUDE_DIR}/taskManager.h"
     "${_ENGINE_INCLUDE_DIR}/taskUtils.h"
+    "${_ENGINE_INCLUDE_DIR}/usdImagingSelectionDelegate.h"
     "${_ENGINE_INCLUDE_DIR}/usdStageUtils.h"
     "${_ENGINE_INCLUDE_DIR}/viewport.h"
     "${_ENGINE_INCLUDE_DIR}/viewportEngine.h"
