Add unit tests covering more framing use cases (#134)
* Add unit tests covering more framing use cases

Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

* Improve the code

* Add new Windows baseline images

Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

* Add another use case to vsalidate

Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

---------

Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>
Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,9 +56,11 @@ add_executable(${_TARGET}
     tests/testComposeTask.cpp
     tests/testFramePass.cpp
     tests/testFramePasses.cpp
+    tests/testMultiSampling.cpp
+    tests/testPartialModel.cpp
+    tests/testPartialDisplay.cpp
     tests/testSearches.cpp
     tests/testTaskManager.cpp
-    tests/testMultiSampling.cpp
     tests/testVisualizeAOV.cpp
 )
 
