OGSMOD-8424 - Investigate slowdown with three frame passes
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(${_TARGET}
     tests/testPartialDisplay.cpp
     tests/testSearches.cpp
     tests/testTaskManager.cpp
+    tests/testThreeFramePasses.cpp
     tests/testVisualizeAOV.cpp
 )
 
