--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -26,7 +26,6 @@ endif()
 # e.g. "hvt_v0_25_03_adsk".
 set(_SRCFILE "${CMAKE_CURRENT_SOURCE_DIR}/namespace.h.in")
 set(_DSTFILE "${_HVT_INCLUDE_DIR}/hvt/namespace.h")
-set(_MODULE_NAME "hvt")
 configure_file(${_SRCFILE} ${_DSTFILE})
 
 #---------------------------------------------------------------------------------------------------
@@ -73,6 +72,7 @@ endif()
 
 # Add the main library for the project, which will be built as a static library by default.
 set(_TARGET "hvt")
+set(_MODULE_NAME ${_TARGET})
 add_library(${_TARGET} "main.cpp" ${_PRIVATE_FILES})
 
 if (MSVC)
