ci: run GPU tests when maintainer approves PR (fork/external contributors)
- Trigger ci-test on pull_request_review (approved); pass PR head ref to build
- Add optional ref input to ci-steps for correct checkout on review events
- README: document that review approval starts pipeline; approval dialog may not appear on forks

--- a/.github/workflows/ci-steps.yaml
+++ b/.github/workflows/ci-steps.yaml
@@ -22,6 +22,10 @@ on:
         required: false
         type: boolean
         default: false
+      ref:
+        required: false
+        type: string
+        description: 'Override checkout ref (e.g. PR head for pull_request_review)'
 
 jobs:
   build:
@@ -40,7 +44,7 @@ jobs:
         submodules: recursive
         fetch-depth: 0
         clean: true  # Clean untracked files if any
-        ref: ${{ github.ref }}
+        ref: ${{ inputs.ref || github.ref }}
 
     - name: Install dependencies (Linux only)
       if: runner.os == 'Linux'
