Improve Unit Test Framework
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/test/RenderingFramework/CMakeLists.txt
+++ b/test/RenderingFramework/CMakeLists.txt
@@ -18,6 +18,8 @@ set(_TARGET "hvt_test_framework")
 set(_FRAMEWORK_TARGET ${_TARGET} PARENT_SCOPE)
 
 set(_SOURCE_FILES
+    GpuImageCapture.cpp
+    GpuImageCapture.h
     TestHelpers.cpp
     TestHelpers.h
     UsdHelpers.h
