--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,7 +23,7 @@ set(_TEST_TARGET ${_TARGET} PARENT_SCOPE)
 
 # Find vcpkg-provided packages
 find_package(GTest CONFIG REQUIRED)
-find_package(glfw3 CONFIG REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
 find_package(glew CONFIG REQUIRED)
 
 #---------------------------------------------------------------------------------------------------
